--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Flappy_bird_game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Flappy_bird_game.data.br",
-        frameworkUrl: buildUrl + "/Flappy_bird_game.framework.js.br",
-        codeUrl: buildUrl + "/Flappy_bird_game.wasm.br",
+        dataUrl: buildUrl + "/Flappy_bird_game.data.gz",
+        frameworkUrl: buildUrl + "/Flappy_bird_game.framework.js.gz",
+        codeUrl: buildUrl + "/Flappy_bird_game.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Flappy bird",
