--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <title>Unity WebGL Player | Flappy bird</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <style>
+      /* Force the canvas container to maintain a 9:16 aspect ratio */
+      #unity-container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      #unity-canvas {
+        /* This ensures the aspect ratio is always 9:16 */
+        width: 100%;
+        height: auto;
+        max-height: 100%;
+        aspect-ratio: 9 / 16;
+      }
+    </style>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -61,25 +79,20 @@
         codeUrl: buildUrl + "/Flappy_bird_game.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Flappy bird",
+        productName: "Baby Neiro The Hero",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
+      // Ensure the correct aspect ratio for mobile devices
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         container.className = "unity-mobile";
         canvas.className = "unity-mobile";
-        // To lower canvas resolution on mobile devices to gain some performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        config.devicePixelRatio = 1; // Uncomment this line to limit pixel density on mobile devices
       }
 
       loadingBar.style.display = "block";
