--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         aspect-ratio: 9 / 16; /* Maintain the 9:16 aspect ratio */
         object-fit: contain;  /* Contain the content within the bounds without stretching */
       }
+
+      /* Hide the fullscreen button */
+      #unity-fullscreen-button {
+        display: none;
+      }
     </style>
   </head>
   <body>
@@ -53,7 +58,6 @@
       <div id="unity-warning"> </div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">Baby Neiro The Hero</div>
       </div>
     </div>
@@ -63,7 +67,6 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -120,9 +123,6 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
         }).catch((message) => {
           alert(message);
         });
